# vki-optimizer-airfoil

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
cfd/: fluent_runner.py  mock_evaluator.py
doe/: sampler.py
geometry/: naca4.py
meshing/: gmsh_mesh.py
optimization/: problem.py  runner.py
postprocessing/: animation.py  plot_pareto_with_airfoils.py  visualization.py
results/: doe_samples.csv  nsga2_checkpoint.pkl  pareto_solutions.csv  surrogate_model.pkl
surrogate/: ann_model.py
