[project]
name = "optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansys-fluent-core>=0.20.0",
    "gmsh>=4.11.0",
    "matplotlib>=3.7.0",
    "meshio>=5.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pymoo>=0.6.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]
